force-app/main/default/objects/Trial_Activity__c/Trial_Activity__c.object-meta.xml
<CustomObject>
    <label>Trial Activity</label>
    <nameField>
        <label>Trial Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trial Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>