force-app/main/default/objects/Trial_Activity__c/fields/Current_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Step</label>
    <referenceTo>Path_Activity__c</referenceTo>
    <relationshipLabel>Trial Activities</relationshipLabel>
    <relationshipName>Trial_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>