force-app/main/default/objects/Trial_Activity__c/fields/Path_IT_Tools__c.field-meta.xml
<CustomField>
    <fullName>Path_IT_Tools__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Path: IT Tools</label>
    <type>Checkbox</type>
</CustomField>