force-app/main/default/objects/Trial_Activity__c/fields/Path_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Path_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Path Mobile</label>
    <type>Checkbox</type>
</CustomField>