force-app/main/default/objects/Trial_Activity__c/fields/Path_See_Apps__c.field-meta.xml
<CustomField>
    <fullName>Path_See_Apps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Path: See Apps</label>
    <type>Checkbox</type>
</CustomField>