force-app/main/default/objects/Trial_Activity__c/fields/Paths_Chosen__c.field-meta.xml
<CustomField>
    <fullName>Paths_Chosen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paths Chosen</label>
    <type>Checkbox</type>
</CustomField>