force-app/main/default/objects/Trial_Activity__c/fields/Questionnaire_Completed__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Questionnaire Completed</label>
    <type>Checkbox</type>
</CustomField>