force-app/main/default/objects/Trial_Activity__c/fields/Story_Introduced__c.field-meta.xml
<CustomField>
    <fullName>Story_Introduced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Story Introduced</label>
    <type>Checkbox</type>
</CustomField>