force-app/main/default/objects/Trial_Activity__c/fields/Video_Watched__c.field-meta.xml
<CustomField>
    <fullName>Video_Watched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video Watched</label>
    <type>Checkbox</type>
</CustomField>