force-app/main/default/objects/Trial_Activity__c/fields/WelcomeViewed__c.field-meta.xml
<CustomField>
    <fullName>WelcomeViewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WelcomeViewed</label>
    <type>Checkbox</type>
</CustomField>